feat: add endpoint to get jobs by external_id
